# MikasEmulators

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  initial.lmc  iwyu.imp  make_emscripten.sh  make_gcc.sh
libs/imgui/: CMakeLists.txt  SourceFiles.cmake  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp  imgui_impl_sdl_emscripten.cpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/applications/: CMakeLists.txt  SourceFiles.cmake  frontend.cpp  frontend.h  options.cpp  options.h
src/applications/command_line_arguments/: command_line_arguments.cpp  command_line_arguments.h  identifier.cpp  identifier.h  long_option.cpp  long_option.h  parser.cpp  parser.h  scanner.cpp  scanner.h  short_option.cpp  short_option.h  token.cpp  token.h  token_kind.h
src/applications/cpm_8080/: cpm_application.cpp  cpm_application.h  cpm_application_session.cpp  cpm_application_session.h  usage.cpp  usage.h
src/applications/cpm_z80/: cpm_application.cpp  cpm_application.h  cpm_application_session.cpp  cpm_application_session.h  usage.cpp  usage.h
src/applications/game_boy/: audio.cpp  audio.h  boot_rom.h  game_boy.cpp  game_boy.h  game_boy_session.cpp  game_boy_session.h  gui.cpp  gui.h  gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  gui_sdl.cpp  gui_sdl.h  input_imgui.cpp  input_imgui.h  input_sdl.cpp  input_sdl.h  interrupts.h  key_request.h  lcd.cpp  lcd.h  lcd_control.cpp  lcd_control.h  lcd_status.cpp  lcd_status.h  memory_mapped_io_for_game_boy.cpp  memory_mapped_io_for_game_boy.h  memory_mapped_io_for_pacman.cpp  memory_mapped_io_for_pacman.h  pacman.cpp  pacman.h  pacman_session.cpp  pacman_session.h  settings.cpp  settings.h  timer.cpp  timer.h  usage.cpp  (+1 more)
src/applications/lmc_application/: emscripten_runner.cpp  gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  input_imgui.cpp  input_imgui.h  io_request.h  lmc_application.cpp  lmc_application.h  lmc_application_session.cpp  lmc_application_session.h  lmc_memory_editor.cpp  lmc_memory_editor.h  terminal_input_state.h  tui_terminal.cpp  tui_terminal.h  ui.h  usage.cpp  usage.h
src/applications/pacman/: audio.cpp  audio.h  gui.cpp  gui.h  gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  gui_sdl.cpp  gui_sdl.h  input_imgui.cpp  input_imgui.h  input_sdl.cpp  input_sdl.h  io_request.h  memory_mapped_io.cpp  memory_mapped_io.h  memory_mapped_io_for_pacman.cpp  memory_mapped_io_for_pacman.h  pacman.cpp  pacman.h  pacman_session.cpp  pacman_session.h  settings.cpp  settings.h  usage.cpp  usage.h
src/applications/space_invaders/: audio.cpp  audio.h  cpu_io.cpp  cpu_io.h  gui.h  gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  gui_sdl.cpp  gui_sdl.h  input_imgui.cpp  input_imgui.h  input_sdl.cpp  input_sdl.h  io_request.h  key_request.h  memory_map_for_space_invaders.cpp  memory_map_for_space_invaders.h  settings.cpp  settings.h  sounds.h  space_invaders.cpp  space_invaders.h  space_invaders_session.cpp  space_invaders_session.h  usage.cpp  usage.h
src/applications/synacor_application/: gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  input_imgui.cpp  input_imgui.h  memory_map_for_synacor_application.cpp  memory_map_for_synacor_application.h  synacor_application.cpp  synacor_application.h  synacor_application_session.cpp  synacor_application_session.h  tui_terminal.cpp  tui_terminal.h  ui.h  usage.cpp  usage.h
src/applications/zxspectrum_48k/: audio.cpp  audio.h  cpu_io.cpp  cpu_io.h  gui.cpp  gui.h  gui_imgui.cpp  gui_imgui.h  gui_io.h  gui_request.h  gui_sdl.cpp  gui_sdl.h  input_imgui.cpp  input_imgui.h  input_sdl.cpp  input_sdl.h  joystick_type.h  key_request.h  keyboard_pane.cpp  keyboard_pane.h  memory_map_for_zxspectrum_48k.cpp  memory_map_for_zxspectrum_48k.h  settings.cpp  settings.h  usage.cpp  usage.h  zxspectrum_48k.cpp  zxspectrum_48k.h  zxspectrum_48k_print_header_session.cpp  zxspectrum_48k_print_header_session.h  zxspectrum_48k_session.cpp  zxspectrum_48k_session.h
src/chips/8080/: CMakeLists.txt  SourceFiles.cmake  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  disassembler8080.cpp  disassembler8080.h  emulator_memory.cpp  emulator_memory.h  flags.cpp  flags.h  shift_register.cpp  shift_register.h
src/chips/lr35902/: CMakeLists.txt  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  flags.cpp  flags.h  interrupt_mode.h  manual_state.h  util.cpp  util.h
src/chips/namco_wsg3/: CMakeLists.txt  SourceFiles.cmake  voice.cpp  voice.h  waveform.cpp  waveform.h  wsg3.cpp  wsg3.h
src/chips/z80/: CMakeLists.txt  SourceFiles.cmake  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  disassemblerZ80.cpp  disassemblerZ80.h  emulator_memory.cpp  emulator_memory.h  flags.cpp  flags.h  interrupt_mode.h  manual_state.h  util.cpp  util.h
src/crosscutting/: CMakeLists.txt  SourceFiles.cmake  breakpoint.cpp  breakpoint.h  byte_util.cpp  byte_util.h  debugger.cpp  debugger.h  file_util.cpp  file_util.h  invalid_program_arguments_exception.cpp  invalid_program_arguments_exception.h  string_util.cpp  string_util.h  typedefs.h  unrecognized_opcode_exception.cpp  unrecognized_opcode_exception.h
src/crosscutting/audio/: waveform.cpp  waveform.h
src/crosscutting/debugging/: advanced_disassembler.cpp  advanced_disassembler.h  basic_block.cpp  basic_block.h  breakpoint.cpp  breakpoint.h  debug_container.cpp  debug_container.h  debugger.cpp  debugger.h  disassembled_line.cpp  disassembled_line.h
src/crosscutting/exceptions/: invalid_program_arguments_exception.cpp  invalid_program_arguments_exception.h  rom_file_not_found_exception.cpp  rom_file_not_found_exception.h  unrecognized_opcode_exception.cpp  unrecognized_opcode_exception.h  unsupported_exception.cpp  unsupported_exception.h
src/crosscutting/gui/: color.cpp  color.h  cpu_info.cpp  cpu_info.h  debug_log.cpp  debug_log.h  disassembly_window.cpp  disassembly_window.h  framebuffer.cpp  framebuffer.h  gui_type.h  io_info.cpp  io_info.h  memory_editor_window.cpp  memory_editor_window.h  palette.cpp  palette.h  (+8 more)
(+941 files in other folders)
